fix: rank the leaderboard in SQL, tighten user authorization, repair 401 responses
Three related backend fixes, all on the leaderboard/authorization path.

Leaderboard N+1 (backend audit issue 8)
The service looped over every row in the page and issued one COUNT per member to
work out that member's rank. A default page of 20 cost 22 round trips and scaled
with page size, up to 102 at the maximum permitted size of 100.

Ranking now happens in the query that fetches the page, via
RANK() OVER (ORDER BY rating DESC NULLS LAST). That reproduces the previous
semantics exactly rather than approximately: RANK is standard competition
ranking, so tied ratings share a position and the next distinct rating skips the
gap (1, 1, 3), and unrated members — all equal under NULLS LAST — tie together on
one trailing rank. ROW_NUMBER would have silently broken ties apart.

The window function is evaluated before LIMIT, so ranks stay absolute across
pages: page 2 continues from where page 1 stopped instead of restarting at 1.

Authorization hardening
The filter chain opened GET /api/users/** to everyone. The endpoints that return
an email address are guarded by @PreAuthorize, which does hold — method security
is enabled and this is now proven by test — but it left the annotations as the
only thing between an anonymous request and every student's email address.
Deleting one line during a refactor would have published the roster silently.

Public paths are now listed individually and everything else under /api/users
requires authentication, so the filter chain is deny-by-default: a new endpoint
added there is protected until someone deliberately opens it.

Broken 401 responses
Found by the first test written above: AuthEntryPointJwt built its own Jackson 2
ObjectMapper. Spring Boot 4 serializes with Jackson 3, and Jackson 2 is only
present transitively, so that mapper had no JSR-310 module registered and threw
on the entry point's own LocalDateTime timestamp. Every 401 failed while writin